--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.3"
-  }
+  },
+  "dependencies": {}
 }
